--- a/member.html
+++ b/member.html
@@ -117,7 +117,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="./js/navbar-loader.js" defer></script>
-    
+    <script src="./js/sweetalert-replacer.js"></script>
     <script src="./js/member.js"></script>
 
   </body>
