--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>毛孩到府服務平台</title>
+  <meta name="google-site-verification" content="h0FqZ2-tMmbsQMphL9jba_vB0_INI6NzjGG6zavf6nw" />
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css">
+  
 </head>
 
 <body>
