--- a/login.html
+++ b/login.html
@@ -23,17 +23,19 @@
     </section>
 
     <!-- 登入表單 -->
-    <section class="login-card card">
-      <h2 class="text-center">登入</h2>
-      <div id="error-message" class="text-center text-danger mb-2" style="display: none;"></div>
-      <form id="login-form">
-        <input id="email" type="email" placeholder="電子郵件" required />
-        <input id="password" type="password" placeholder="密碼" required />
-        <button type="submit">登入</button>
-      </form>
-      <div class="links">
-        還沒有帳號？<a href="register.html">立即註冊</a><br />
-        忘記密碼？<a href="forgot-password.html">重設密碼</a>
+    <section>
+      <div class="login-card card">
+        <h2 class="text-center">登入</h2>
+        <div id="error-message" class="text-center text-danger mb-2" style="display: none;"></div>
+        <form id="login-form">
+          <input id="email" type="email" placeholder="電子郵件" required />
+          <input id="password" type="password" placeholder="密碼" required />
+          <button type="submit">登入</button>
+        </form>
+        <div class="links">
+          還沒有帳號？<a href="register.html">立即註冊</a><br />
+          忘記密碼？<a href="forgot-password.html">重設密碼</a>
+        </div>
       </div>
     </section>
   </main>
