--- a/cart.html
+++ b/cart.html
@@ -8,13 +8,14 @@
   <link rel="icon" href="./img/icon.png" type="image/png">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/cart.css">
 </head>
 
 <body>
   <!-- 導覽列 -->
   <div id="navbar-placeholder"></div>
 
-  <div class="container mt-5">
+  <div class="container mt-5 ">
     <h1 class="mb-4">購物車</h1>
 
     <div id="cart-items" class="mb-4">
@@ -32,8 +33,8 @@
     </div>
   </div>
 
-  <footer class="mt-5 text-center py-3 bg-light fixed-bottom"">
-    © 2025 毛孩到府服務平台 | 保留所有權利
+  <footer>
+    <p>© 2025 毛孩到府服務平台 | 保留所有權利</p>
   </footer>
 
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js">
