--- a/reviews.html
+++ b/reviews.html
@@ -15,7 +15,7 @@
   <!-- 與主頁、加入我們相同的 navbar 占位符 -->
 
   <div id="navbar-placeholder"></div>
-  <div class="container mt-5">
+  <div class="container">
     <h1>服務者評價系統</h1>
     <label for="provider">選擇服務者：</label>
     <select id="provider" name="provider">
