--- a/navbar.html
+++ b/navbar.html
@@ -34,7 +34,7 @@
           <a class="nav-link" href="contace_us.html">聯絡我們</a>
         </li>
         <li class="nav-item">
-          <span id="auth-links" class="nav-link"></span>
+          <span id="auth-links"></span>
         </li>
       </ul>
     </div>
